Fixed issue on iOS 7 safari with rendering of holdings on search results

--- a/app/assets/stylesheets/blah.css.scss
+++ b/app/assets/stylesheets/blah.css.scss
@@ -804,8 +804,8 @@ padding: 0;
 	border: none;
 }
 
-div#document-phone.document {
-  background-color: #EFEFEF;
+.document-phone.document {
+  background-color: #EFEFEF !important;
   margin-top: 1em !important;
   padding: 1em !important;
   #cover-art {
@@ -871,7 +871,7 @@ div#document-phone.document {
   text-align: center;
 }
 
-#document-phone {
+.document-phone {
   #cover-art {
     clear: both !important;
     height: calc(200px + 0.5em) !important;
@@ -881,7 +881,7 @@ div#document-phone.document {
   }
 } 
 
-#document-phone #holdings-record-element .defList {
+.document-phone #holdings-record-element .defList {
 dt {
   font-size: 16px;
   padding-bottom: 0;
